[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/Agenda.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.164706, 0.694118, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 76.0
margin_top = 84.0
margin_right = 946.0
margin_bottom = 584.0
rect_min_size = Vector2( 870, 500 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="Button_exit" type="Button" parent="."]
margin_left = 865.0
margin_top = 525.0
margin_right = 1006.0
margin_bottom = 587.0
text = "Voltar"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -237.5
margin_right = 219.5
margin_bottom = 237.5

[node name="OptionButtondrawer" type="OptionButton" parent="CanvasLayer/ColorRect"]
margin_left = 99.5
margin_top = 52.5
margin_right = 353.5
margin_bottom = 132.5

[node name="LineEditinfo" type="LineEdit" parent="CanvasLayer/ColorRect"]
margin_left = 85.5
margin_top = 239.5
margin_right = 362.5
margin_bottom = 305.5

[node name="LineEdithour" type="LineEdit" parent="CanvasLayer/ColorRect"]
margin_left = 152.5
margin_top = 168.5
margin_right = 214.5
margin_bottom = 205.5
max_length = 2

[node name="LineEditminute" type="LineEdit" parent="CanvasLayer/ColorRect"]
margin_left = 224.5
margin_top = 167.5
margin_right = 286.5
margin_bottom = 204.5
max_length = 2

[node name="Button_add_agenda" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 135.5
margin_top = 387.5
margin_right = 429.5
margin_bottom = 462.5
text = "Anexar Na Agenda"

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -237.5
margin_right = 219.5
margin_bottom = 237.5

[node name="OptionButtondraweredit" type="OptionButton" parent="CanvasLayer3/ColorRect"]
margin_left = 99.5
margin_top = 52.5
margin_right = 353.5
margin_bottom = 132.5

[node name="LineEditinfoedit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 85.5
margin_top = 239.5
margin_right = 362.5
margin_bottom = 305.5

[node name="LineEdithouredit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 152.5
margin_top = 168.5
margin_right = 214.5
margin_bottom = 205.5
max_length = 2

[node name="LineEditminuteedit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 224.5
margin_top = 167.5
margin_right = 286.5
margin_bottom = 204.5
max_length = 2

[node name="Button_confirmedit_agenda" type="Button" parent="CanvasLayer3/ColorRect"]
margin_left = 135.5
margin_top = 387.5
margin_right = 429.5
margin_bottom = 462.5
text = "Confirmar Edição"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = -200.5
margin_right = 207.5
margin_bottom = 200.5
color = Color( 0.905882, 0.0901961, 0.0901961, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer2/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -200.0
margin_right = 207.0
margin_bottom = 200.0
rect_min_size = Vector2( 414, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/ColorRect/ScrollContainer"]

[node name="Button_return" type="Button" parent="CanvasLayer2/ColorRect"]
margin_left = 271.5
margin_top = 342.5
margin_right = 406.5
margin_bottom = 394.5
text = "Retornar"

[node name="Button_createagenda" type="Button" parent="CanvasLayer2/ColorRect"]
margin_left = 271.5
margin_top = 286.5
margin_right = 406.5
margin_bottom = 338.5
text = "criar agenda"

[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
[connection signal="item_selected" from="CanvasLayer/ColorRect/OptionButtondrawer" to="." method="_on_OptionButtondrawer_item_selected"]
[connection signal="pressed" from="CanvasLayer/ColorRect/Button_add_agenda" to="." method="_on_Button_add_agenda_pressed"]
[connection signal="item_selected" from="CanvasLayer3/ColorRect/OptionButtondraweredit" to="." method="_on_OptionButtondraweredit_item_selected"]
[connection signal="pressed" from="CanvasLayer3/ColorRect/Button_confirmedit_agenda" to="." method="_on_Button_confirmedit_agenda_pressed"]
[connection signal="pressed" from="CanvasLayer2/ColorRect/Button_return" to="." method="_on_Button_return_pressed"]
[connection signal="pressed" from="CanvasLayer2/ColorRect/Button_createagenda" to="." method="_on_Button_createagenda_pressed"]
